syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "exchange";
option go_package = "internal/channels/grpc/impl";

package walbety.exchange;

service ExchangeService {
  rpc GetExchangeRateByCurrencyAndDate(ExchangeRateRequest) returns (ExchangeRateResponse){}
}

message ExchangeRateResponse {
  string Currency = 1;
  string ExchangeRate = 2;
  google.protobuf.Timestamp Date = 3;
  Error Error = 4;
}

message ExchangeRateRequest {
  string Currency = 1;
  google.protobuf.Timestamp Date = 2;
}

message Error {
  string Code = 1;
  string Message = 2;
}